# mad-useful

./: Cargo.toml  README.md  generate_readme.sh
.github/workflows/: build.yml
src/: analysis.rs  args.rs  display.rs  file_utils.rs  git.rs  main.rs  watch.rs
