[package]
name = "mad-useful"
version = "0.2.0"
edition = "2024"
description = "A multi-tool utility for file operations and text processing"
license = "MIT"

[[bin]]
name = "madu"
path = "src/main.rs"

[dependencies]
glob = "0.3"
clap = { version = "4.0", features = ["derive", "env"] }
ignore = "0.4"
termcolor = "1.0"
rayon = "1.0"
ctrlc = "3.0"
